FIX: Remove gap for small images

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -325,7 +325,7 @@ footer {
 
     .logo image{
         max-height: 100px;
-        gap: 0;
+        gap: 0px;
     }
 }
 
